k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dynamic-app
  labels:
    app: dynamic-app
    app.kubernetes.io/name: dynamic-app
    app.kubernetes.io/part-of: dynamic-app
