k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dynamic-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dynamic-app
  template:
    metadata:
      labels:
        app: dynamic-app
    spec:
      imagePullSecrets:
        - name: ghcr-creds
      containers:
        - name: dynamic-app
          image: dynamicapp:latest
          ports:
            - containerPort: 3000
