k8s/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dynamic-app
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`dynamic.lab`)
      kind: Rule
      services:
        - name: dynamic-app
          port: 80
